<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.DetailUser">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/img_avatar"
            app:layout_constraintStart_toStartOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/id"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/bt_share"
            app:layout_constraintEnd_toEndOf="@+id/tv_repository"
            app:layout_constraintStart_toStartOf="@+id/tv_follower"
            app:layout_constraintTop_toBottomOf="@+id/tv_ket_following" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/company"
            android:textSize="11sp"
            app:drawableTopCompat="@drawable/ic_baseline_work"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.672"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="247dp" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/alamat"
            android:textSize="11sp"
            app:drawableTopCompat="@drawable/ic_baseline_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.308"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginBottom="6dp"
            android:text="@string/follower"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_ket_follow"
            app:layout_constraintEnd_toEndOf="@+id/tv_ket_follow"
            app:layout_constraintStart_toStartOf="@+id/tv_ket_follow" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/following"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_ket_following"
            app:layout_constraintEnd_toEndOf="@+id/tv_ket_following"
            app:layout_constraintStart_toStartOf="@+id/tv_ket_following" />

        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/repository"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_ket_repo"
            app:layout_constraintEnd_toEndOf="@+id/tv_ket_repo"
            app:layout_constraintStart_toStartOf="@+id/tv_ket_repo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="134dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="115dp" />

        <TextView
            android:id="@+id/tv_ket_follow"
            style="@style/teks_ex"
            android:layout_marginEnd="16dp"
            android:text="@string/ket_follower"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/tv_ket_following"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <TextView
            android:id="@+id/tv_ket_following"
            style="@style/teks_ex"
            android:text="@string/ket_following"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <TextView
            android:id="@+id/tv_ket_repo"
            style="@style/teks_ex"
            android:layout_marginStart="16dp"
            android:text="@string/ket_repo"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_ket_following"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <Button
            android:id="@+id/bt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_share"
            android:background="@drawable/bg"
            app:layout_constraintBottom_toBottomOf="@+id/tv_nameUser"
            app:layout_constraintEnd_toEndOf="@+id/tv_repository"
            app:layout_constraintStart_toStartOf="@+id/tv_follower"
            app:layout_constraintTop_toTopOf="@+id/tv_nama" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="303dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg"
            app:tabIndicatorColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:tabTextColor="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="733dp" />

        <TextView
            android:id="@+id/tv_nameUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nameuser"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/tv_nama"
            app:layout_constraintStart_toStartOf="@+id/tv_nama"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

        <ToggleButton
            android:id="@+id/toggleFavUser"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/toggle_user_favorite"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""

            app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
            app:layout_constraintEnd_toEndOf="@+id/img_avatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


